cmake_minimum_required(VERSION 3.22)
project(Chapter03)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_COMPILER g++)
set(CMAKE_CXX_FLAGS "-std=c++23 -Wall -Wextra -Werror -Wpedantic")
set(CMAKE_VERBOSE_MAKEFILE on)

add_executable(anonymous_pipe_example anonymous_pipe_example.cpp)
add_executable(anonymous_pipe_sigpipe_example anonymous_pipe_sigpipe_example.c)
add_executable(cpp_and_named_pipe cpp_and_named_pipe.cpp)
add_executable(create_exemplary_links create_exemplary_links.cpp)
add_executable(dir_creator dir_creator.cpp)
add_executable(dir_file_removal dir_file_removal.cpp)
add_executable(dir_file_rename dir_file_rename.cpp)
add_executable(dir_iterator dir_iterator.cpp)
add_executable(dir_symlink dir_symlink.cpp)
add_executable(fifo_check fifo_check.cpp)
add_executable(named_pipe_example named_pipe_example.c)
