cmake_minimum_required(VERSION 3.22)
project(Chapter05)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_COMPILER g++)
set(CMAKE_CXX_FLAGS "-std=c++23 -Wall -Wextra -Werror -Wpedantic")
set(CMAKE_VERBOSE_MAKEFILE on)

add_executable(custom-error-category custom-error-category.cpp)
add_executable(error-code error-code.cpp)
add_executable(error-condition error-condition.cpp)
add_executable(leak leak.cpp)
add_executable(posix-file posix-file.cpp)
add_executable(raii raii.cpp)
add_executable(rethrow rethrow.cpp)
add_executable(system-error system-error.cpp)
