cmake_minimum_required(VERSION 3.22)
project(Chapter10)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_COMPILER g++)
set(CMAKE_CXX_FLAGS "-std=c++23 -Wall -Wextra -Werror -Wpedantic -Wno-sign-compare")
set(CMAKE_VERBOSE_MAKEFILE on)

add_executable(cpp_atomic_flags cpp_atomic_flags.cpp)
add_executable(cpp_increment_atomic cpp_increment_atomic.cpp)
add_executable(cpp_mutex cpp_mutex.cpp)
add_executable(cpp_sem_example cpp_sem_example.cpp)
add_executable(mq_example mq_example.cpp)
add_executable(posix_semaphore_example posix_semaphore_example.c)
add_executable(shm_example shm_example.cpp)
add_executable(tcp_client tcp_client.cpp)
add_executable(tcp_server tcp_server.cpp)
add_executable(udp_example udp_example.cpp)
